Confirm a sales order

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -356,6 +356,9 @@ es:
         title: "Editar pedido de %{client_name} (%{status})"
       update:
         success: "Pedido actualizado."
+      confirmations:
+        create:
+          success: "Pedido confirmado exitosamente."
       sales_order:
         actions: "Acciones"
       sales_order_item_actions:
