--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -28,6 +28,7 @@ es:
             base:
               split_quantity_invalid: "Cantidad a dividir debe ser mayor que 0 y menor que la cantidad total"
               in_progress_invalid: "El pedido no puede ser preparado en su estado actual"
+              ready_invalid: "El pedido no puede ser completado en su estado actual"
         sales_order:
           not_confirmable: "El pedido no puede ser confirmado en su estado actual o sus ítems no son válidos."
           not_cancellable: "El pedido no puede ser cancelado en su estado actual."
@@ -251,7 +252,7 @@ es:
           quote: "Cotización"
           confirmed: "Confirmado"
           in_progress: "Preparando"
-          ready: "Listo"
+          ready: "Preparado"
           delivered: "Entregado"
           cancelled: "Cancelado"
         unit_price: "Precio"
@@ -373,21 +374,25 @@ es:
         success: "Pedido actualizado."
       confirmations:
         create:
-          success: "Pedido confirmado exitosamente."
+          success: "Pedido confirmado."
       sales_order:
         actions: "Acciones"
       sales_order_item_actions:
-        split: "Dividir pedido"
-        work_on: "Trabajar en pedido"
+        split: "Dividir cantidad"
+        work_on: "Preparar productos"
+        complete: "Completar productos"
+      completes:
+        create:
+          success: "Producto completado."
       splits:
         create:
-          success: "Ítem separado correctamente."
+          success: "Ítem separado."
         form:
           split: "Dividir pedido"
           cancel: "Cancelar división"
       works:
         create:
-          success: "Pedido en proceso."
+          success: "Preparando productos."
   auditable:
     boolean_true: "Sí"
     boolean_false: "No"
