Setup activity history in sales dashboard

--- a/config/locales/comman_es.yml
+++ b/config/locales/comman_es.yml
@@ -65,6 +65,12 @@ es:
       making_order_item:
         one: "Producto"
         other: "Productos"
+      sales_order:
+        one: "Pedido"
+        other: "Pedidos"
+      sales_order_item:
+        one: "Producto"
+        other: "Productos"
       supplier:
         one: "Proveedor"
         other: "Proveedores"
