Update sales order item translation
...to better identify activity changes in the dashboard

--- a/config/locales/ar_es.yml
+++ b/config/locales/ar_es.yml
@@ -70,8 +70,8 @@ es:
         one: "Pedido"
         other: "Pedidos"
       sales/order/item:
-        one: "Producto"
-        other: "Productos"
+        one: "Producto pedido"
+        other: "Productos pedidos"
       supplier:
         one: "Proveedor"
         other: "Proveedores"
